# Task3

./: CMakeLists.txt  Fabric.h  Temp.cpp  Temp.h  Test.cpp  Vector.cpp  Vector.h  VectorHori.cpp  VectorHori.h  VectorVert.cpp  VectorVert.h  main.cpp
